# model-tools

./: .gitignore  CHANGES.txt  LICENSE  README.md  changes.md  pyproject.toml
model_tools/: __init__.py
model_tools/analysis/: __init__.py  analyze_chains.py
model_tools/dataprep/: prepare_train_data.py
model_tools/io/: __init__.py
model_tools/viz/: __init__.py  market_plots.py  plot_metrics.py  plot_price_peaks.py  standalone_plot_peaks.py
scripts/: make-release-assets.sh
tests/: __init__.py  test_analysis.py  test_chain_length_statistics_cli.py  test_plot_peaks_overlay_cli.py  test_plot_training_metrics_cli.py  test_viz.py
tests/integration/: test_prediction.py
wiki/: Changelog.md  Data-Loader-Integration.md
