[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "model-tools-ml"
version = "0.1.3"
description = "Diagnostics, analysis, and visualization for ML model development"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    {name = "Alex & Claude", email = "python@iitsp.com.au"},
]
dependencies = [
    "numpy>=1.24.0",
    "pandas>=2.0.0",
    "matplotlib>=3.7.0",
    "pyyaml>=6.0",
    "homebrewlibra[io]>=0.2.4",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
]

tests = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
]

[project.urls]
Homepage = "https://github.com/Alex-Glebov/model-tools"
Repository = "https://github.com/Alex-Glebov/model-tools.git"

[tool.setuptools.packages.find]
where = ["."]
include = ["model_tools*"]
exclude = ["tests*", "test*", "wiki*"]
